Adaptation de la police pour la taille de l'écran Padding de l'icone pour le splash screen

--- a/Marvel/Base.lproj/LaunchScreen.storyboard
+++ b/Marvel/Base.lproj/LaunchScreen.storyboard
@@ -15,13 +15,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MarvelIcon" translatesAutoresizingMaskIntoConstraints="NO" id="N1O-I1-CPj">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarvelIcon" translatesAutoresizingMaskIntoConstraints="NO" id="N1O-I1-CPj">
+                                <rect key="frame" x="10" y="235" width="394" height="436"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="N1O-I1-CPj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="JEu-gf-Zuz"/>
+                            <constraint firstItem="N1O-I1-CPj" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="r3t-FM-rT0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N1O-I1-CPj" secondAttribute="trailing" constant="10" id="zh1-Ss-4L4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
